# Unity_Linux_LLM

./: .codebaserules.yaml  .csharpierrc  .cursorignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  IDEA.md  IMPLEMENTATION_SUMMARY.md  README.md  ROSLYN_CONSOLIDATION_PLAN.md  UNIFIED_CODE_ANALYSIS_STRATEGY.md  Unity_Linux_LLM.slnx  bridge_inspector_dump.json  cognee_memory_simulation.py  dialogue_log.txt  docker-compose.yml  dotnet-tools.json  generate_mystery_variations.py  llm.txt  package-lock.json  package.json  skills-lock.json
.codex/: config.toml
.datadog/: service.datadog.yaml
.gemini/: mcp_config.json
Tools/CodebaseEmbedder/: README.md  pyproject.toml
Tools/CodebaseEmbedder/codebase_embedder/: __init__.py  advise.py  asmdef_parser.py  audit.py  chunking.py  cli.py  config.py  coverage.py  coverage_records.py  csharp_analyzer.py  discovery.py  embeddings.py  indexer.py  package_parser.py  project_rules.py  qdrant_store.py  query.py  query_support.py  records.py  roslyn_wrapper.py  rules_engine.py  sparse.py  structure_graph.py  watcher.py  workflow.py
Tools/CodebaseEmbedder/references/: experiment-matrix.json
Tools/CodebaseEmbedder/roslyn_parser/: Program.cs
Tools/CodebaseEmbedder/scripts/: cognee_bridge.py  cognee_bridge_v2.py  export_relations_graph.py  render_relations_report.py
Tools/CodebaseEmbedder/tests/: test_asmdef_package.py  test_audit.py  test_benchmark_scripts.py  test_csharp_analyzer.py  test_discovery.py  test_export_relations_graph.py  test_index_pipeline.py  test_render_relations_report.py  test_watcher.py
(+1036 files in other folders)
