[project]
name = "unity-codebase-embedder"
version = "0.1.0"
description = "Offline-first Unity C# codebase scanner and Qdrant indexer"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
codebase-embedder = "codebase_embedder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codebase_embedder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
